# Test-task-storing-and-aggregation-image

./: main.py  pyproject.toml
