[tool.poetry]
name = "test task storing and aggregation image"
version = "0.1.0"
description = ""
authors = ["inzani <Alexey@Salahutdinov.it.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.103.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

